--- a/inspect/Cargo.toml
+++ b/inspect/Cargo.toml
@@ -15,9 +15,9 @@ derive = ["dep:inspect_derive"]
 [dependencies]
 inspect_derive = { workspace = true, optional = true }
 
-disqualified = "1.0.0"
-memoffset = "0.9.1"
-parking_lot = "0.12.3"
+disqualified.workspace = true
+memoffset.workspace = true
+parking_lot.workspace = true
 
 [dev-dependencies]
 inspect_derive.workspace = true
