--- a/inspect_derive/Cargo.toml
+++ b/inspect_derive/Cargo.toml
@@ -3,13 +3,13 @@ name = "inspect_derive"
 version = "0.0.0"
 edition = "2021"
 
+[lints]
+workspace = true
+
 [lib]
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1.0"
-quote = "1.0"
-syn = { version = "2.0", features = ["extra-traits"] }
-
-[lints]
-workspace = true
+proc-macro2.workspace = true
+quote.workspace = true
+syn = { workspace = true, features = ["extra-traits"] }
